--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,9 @@
-.App {
-  text-align: center;
+.app{
+  width: 100%;
+  height: 100%;
 }
-
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.context{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 90%;
 }
 
-.App-link {
-  color: #09d3ac;
-}
